# YouTube-WebSub-Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
src/: main.py
src/api/: app.py  db.py  schemas.py
src/config/: logging.py  settings.py
src/infra/terraform/: main.tf  output.tf  variables.tf
src/infra/terraform/modules/ec2/: main.tf  output.tf  variables.tf
src/infra/terraform/modules/iam/: main.tf  output.tf  variables.tf
src/worker/: consumer.py  youtube_client.py
